--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ nav a:hover {
     margin-bottom: 25px;
     font-size: 1rem;
     color: #555;
-    text-align: center;
+    text-align: justify;
 }
 
 .certificates-container {
@@ -538,11 +538,10 @@ footer {
     .about-container {
         flex-direction: column;
         align-items: center;
-        text-align: center;
     }
 
     .profile-description {
-        text-align: center;
+        text-align: justify;
         margin-top: 15px;
     }
 }
